src/objects/BGBK__Cart__c.object
<CustomObject>
    <customHelp>MUSW__HelpInterface</customHelp>
    <fields>
        <fullName>BGBK__Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Lookup to the account that is related to the cart record.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Carts</relationshipLabel>
        <relationshipName>Carts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BGBK__Action__c</fullName>
        <formula>HYPERLINK(&quot;/apex/Cart?cartId=&quot; &amp; Id, &quot;Pay Cart&quot;, &quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Action</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BGBK__BG_Payment_Batch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used in the cashiering module to group payments.</description>
        <label>Payment Batch</label>
        <referenceTo>BGBK__Payment_Batch__c</referenceTo>
        <relationshipLabel>Carts</relationshipLabel>
        <relationshipName>Carts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BGBK__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the contact that is related to the cart record.</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Carts</relationshipLabel>
        <relationshipName>Carts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BGBK__Expiration_DateTime__c</fullName>
        <description>Deprecated.</description>
        <label>Expiration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BGBK__Gateway_Processing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Gateway Processing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BGBK__Gateway_Response__c</fullName>
        <label>Gateway Response</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BGBK__Last_Payment_Amount__c</fullName>
        <description>Tendered amount on the transaction.</description>
        <label>Payment Amount</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BGBK__Process_DateTime__c</fullName>
        <description>Transaction date and time.</description>
        <label>Process Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BGBK__Status__c</fullName>
        <description>Status of the cart: Open, Closed, Abandoned.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Abandoned</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BGBK__Total_Amount__c</fullName>
        <description>Total outstanding amount from all items in the cart.</description>
        <label>Total Amount</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BGBK__Type__c</fullName>
        <description>Type of Cart (Cart&apos;s owner): Account, Contact, or Cashier.</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>Cashier</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PIN__c</fullName>
        <formula>BGBK__Account__r.PIN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PIN</label>
        <type>Text</type>
    </fields>
    <label>Cart</label>
    <listViews>
        <fullName>BGBK__All</fullName>
        <columns>NAME</columns>
        <columns>BGBK__Total_Amount__c</columns>
        <columns>BGBK__Last_Payment_Amount__c</columns>
        <columns>BGBK__Process_DateTime__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Carts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>